많은 코드 정리, 많은 클래스 분리, 버튼 데이터 Data 클래스에서 저장하고 불러오게 분리, SwingManager 추가(목적은 SwingGUI와 Screen의 연결 관리), 여러 정리 작동하는지는 테스트 안한 상태