@@ -1,16 +1,12 @@
 package customclient;
 
-import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.mojang.blaze3d.platform.NativeImage;
 import com.mojang.blaze3d.systems.RenderSystem;
-import customclient.swing.ButtonBucket;
-import customclient.swing.ButtonFunction;
-import customclient.swing.SwingButton;
+import customclient.swing.*;
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.gui.components.AbstractWidget;
-import net.minecraft.client.gui.screens.OptionsScreen;
 import net.minecraft.client.gui.screens.TitleScreen;
 import net.minecraft.client.renderer.texture.DynamicTexture;
 import net.minecraft.network.chat.Component;
@@ -20,37 +16,31 @@ import org.lwjgl.glfw.GLFW;
 import javax.swing.*;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public abstract class ScreenCustom extends TitleScreen {
     private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
     protected ResourceLocation BACKGROUND_IMAGE = new ResourceLocation(CustomClient.MODID, "textures/screenshot.png");
+    private SwingManager swingButtonManager;
+    private SwingManager swingDraw;
+    private SwingManager swingBackgroundManager;
+    protected WidgetData widgetData;
 
     protected ButtonFunction buttonFunction;
 
-    protected ArrayList<DrawTexture> drawTextureList = new ArrayList<>();
-    protected ArrayList<GuiButton> buttonList = new ArrayList<>();
-
-    protected SwingButton currentSwingButton;
-
     protected boolean editMode = false;
+    protected Widget selectWidget;
 
-    protected Path screenPath = Path.of("./");
-    protected Path screenButtons = screenPath.resolve("buttons.json");
-    protected Path screenDrawtexture = screenPath.resolve("drawtexture.json");
+    ScreenCustom(String screenName){
+        widgetData = new WidgetData(Paths.get(screenName));
+        swingButtonManager = new SwingManager.ButtonManager(this);
+        swingBackgroundManager = new SwingManager.BackgroundManager(this);
 
-    protected Widget selectWidget, lastSelectWidget;
-
-    @Override
-    protected void init() {
         buttonFunction = new ButtonFunction(this);
-        super.init();
+
         System.setProperty("java.awt.headless", "false");
     }
 
@@ -58,70 +48,8 @@ public abstract class ScreenCustom extends TitleScreen {
 
     public void changeEditMode(){
         editMode = !editMode;
-        if(currentSwingButton != null) {
-
-            currentSwingButton.dispose();
-            currentSwingButton = null;
-        }
         selectWidget = null;
-        saveWidget();
-    }
-
-    public void postInit(){
-        if(buttonList.isEmpty()) {
-            if (!Files.exists(screenButtons)) {
-                addButton();
-            } else {
-                loadWidget();
-                for (int i = 0; i < buttonList.size(); i++) {
-                    GuiButton button = buttonList.get(i);
-                    button.setAbstractWidget((AbstractWidget) children().get(i));
-                    button.setID(i);
-                    button.update();
-                    button.buttonBucket = new ButtonBucket(button);
-                }
-                for(int i = 0; i < drawTextureList.size();i++){
-                    DrawTexture drawTexture = drawTextureList.get(i);
-                    drawTexture.setAbstractWidget(new FakeTextureWidget());
-                    drawTexture.setID(i);
-                    drawTexture.update();
-                }
-            }
-            if (buttonList.isEmpty())
-                throw new NullPointerException("예상 외 결과");
-        }
-    }
-
-    public boolean loadWidget(){
-        try {
-            if(Files.exists(screenButtons)) {
-                String json = new String(Files.readAllBytes(screenButtons));
-                ArrayList buttons = new Gson().fromJson(json, new TypeToken<List<GuiButton>>(){}.getType());
-                if(!buttons.isEmpty())
-                    buttonList = buttons;
-            }
-            if(Files.exists(screenDrawtexture)) {
-                String json = new String(Files.readAllBytes(screenDrawtexture));
-                ArrayList drawTextures = new Gson().fromJson(json, new TypeToken<List<DrawTexture>>(){}.getType());
-                if(!drawTextures.isEmpty())
-                    drawTextureList = drawTextures;
-            }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        return false;
-    }
-    public void saveWidget(){
-        try {
-            CustomClient.LOGGER.info("저장");
-            if(!Files.exists(screenPath)) {
-                Files.createFile(screenPath);
-            }
-            Files.writeString(screenButtons, GSON.toJson(buttonList));
-            Files.writeString(screenDrawtexture, GSON.toJson(drawTextureList));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+        getData().saveWidget();
     }
 
     public void setBackgroundImage(ResourceLocation backgroundImage) {
@@ -135,42 +63,25 @@ public abstract class ScreenCustom extends TitleScreen {
             pGuiGraphics.drawString(font, Component.literal("편집 모드 실행 중"),0, 0,0xFFFFFF, false);
             pGuiGraphics.drawString(font, Component.literal("버튼을 이동할 때 오른쪽 클릭으로 멈출 수 있습니다..."),0, 20,0xFFFFFF, false);
         }
-        for(DrawTexture drawTexture : drawTextureList){
+        for(DrawTexture drawTexture : getData().getDrawTextureList()){
             renderTexture(pGuiGraphics, drawTexture.getTexture(), drawTexture.getX(), drawTexture.getY(), drawTexture.getWidth(), drawTexture.getHeight(), drawTexture.getAlpha());
         }
-    }
-
-    public void renderTexture(GuiGraphics pGuiGraphics, ResourceLocation pShaderLocation, int x, int y, int width, int height, float pAlpha) {
-        RenderSystem.disableDepthTest();
-        RenderSystem.depthMask(false);
-        RenderSystem.enableBlend();
-        pGuiGraphics.setColor(1.0F, 1.0F, 1.0F, pAlpha);
-
-        pGuiGraphics.blit(pShaderLocation, 0, 0, -90, 0.0F, 0.0F, pGuiGraphics.guiWidth(), pGuiGraphics.guiHeight(), pGuiGraphics.guiWidth(), pGuiGraphics.guiHeight());
-        RenderSystem.disableBlend();
-        RenderSystem.depthMask(true);
-        RenderSystem.enableDepthTest();
-        pGuiGraphics.setColor(1.0F, 1.0F, 1.0F, 1.0F);
     }
 
     @Override
     public boolean mouseClicked(double pMouseX, double pMouseY, int pButton) {
         if(editMode){
-            for(GuiButton button : buttonList){
+            for(GuiButton button : getData().getButtonList()){
                 if(button.isMouseOver(pMouseX, pMouseY)) {
                     selectWidget = button;
-
                     if(pButton == 0 && !button.isLock()) {
-                        if (currentSwingButton != null) {
-                            if (currentSwingButton.getSelComponent() == button) {
-                                return false;
-                            }
-                            else {
-                                currentSwingButton.dispose();
-                                currentSwingButton = null;
-                            }
+                        if (selectWidget == button) {
+                            return false;
                         }
-                        currentSwingButton = new SwingButton(this, (GuiButton) selectWidget);
+                        else {
+                            swingButtonManager.close();
+                            swingButtonManager.setSwing(new SwingButton());
+                        }
                         return true;
                     }
                     else if(pButton == 1){
@@ -178,8 +89,8 @@ public abstract class ScreenCustom extends TitleScreen {
                     }
                 }
             }
-            for(DrawTexture texture : drawTextureList){
-                if(pButton == 0 && texture.isMouseOver(pMouseX, pMouseY) && !texture.isLock()) {
+            for(DrawTexture texture : getData().getDrawTextureList()){
+                if(pButton == 0 && texture.canSelectByMouse(pMouseX, pMouseY)) {
                     selectWidget = texture;
                     return true;
                 }
@@ -188,7 +99,7 @@ public abstract class ScreenCustom extends TitleScreen {
             return false;
         }
         else{
-            for(GuiButton button : buttonList){
+            for(GuiButton button : getData().getButtonList()){
                 if(button.isMouseOver(pMouseX, pMouseY)) {
                     actionPerformed(button.getID(), pMouseX, pMouseY, pButton);
                     return false;
@@ -199,7 +110,7 @@ public abstract class ScreenCustom extends TitleScreen {
     }
 
     public void actionPerformed(int buttonID, double mouseX, double mouseY, int pButton){
-        buttonFunction.runScript(buttonList.get(buttonID));
+        buttonFunction.runScript(getData().getButtonList().get(buttonID));
     }
     @Override
     public void mouseMoved(double pMouseX, double pMouseY) {
@@ -209,7 +120,7 @@ public abstract class ScreenCustom extends TitleScreen {
                 int mouseX = (int) pMouseX;
                 int mouseY = (int) pMouseY;
                 selectWidget.setPosition(mouseX, mouseY);
-                currentSwingButton.update();
+                swingButtonManager.update();
             }
         }
     }
@@ -221,11 +132,10 @@ public abstract class ScreenCustom extends TitleScreen {
 
     @Override
     public boolean keyPressed(int pKeyCode, int pScanCode, int pModifiers) {
-
-        if(pKeyCode == 342) {
+        if (pKeyCode == 342) {
             changeEditMode();
         }
-        if(editMode) {
+        if (editMode) {
             if (isSelect()) {
 
                 switch (pKeyCode) {
@@ -245,12 +155,6 @@ public abstract class ScreenCustom extends TitleScreen {
     }
 
     @Override
-    public void onClose() {
-        saveWidget();
-        super.onClose();
-    }
-
-    @Override
     public void onFilesDrop(List<Path> pPacks) {
         super.onFilesDrop(pPacks);
         String fileName = pPacks.get(0).toFile().getName();
@@ -262,12 +166,12 @@ public abstract class ScreenCustom extends TitleScreen {
                 BACKGROUND_IMAGE = resourceLocation;
             }
             case JOptionPane.NO_OPTION -> {
-                drawTextureList.add(new DrawTexture(fileName, resourceLocation));
+                getData().getDrawTextureList().add(new DrawTexture(fileName, resourceLocation));
             }
         }
     }
 
-    public ResourceLocation getTexture(Path dropFile){
+    public static ResourceLocation getTexture(Path dropFile){
         Path toPath = Paths.get("D:\\Projects\\thirdCustomClient\\src\\main\\resources\\assets\\customclient/"+dropFile.getFileName().toString().replace(" ","_"));
         try {
             if(!Files.exists(toPath))
@@ -275,7 +179,8 @@ public abstract class ScreenCustom extends TitleScreen {
 
             NativeImage nativeImage = NativeImage.read(new FileInputStream(toPath.toString()));
             DynamicTexture dynamicTexture = new DynamicTexture(nativeImage);
-            return getMinecraft().getTextureManager().register("customclient", dynamicTexture);
+
+            return Minecraft.getInstance().getTextureManager().register("customclient", dynamicTexture);
         }
         catch (IOException e){
             JOptionPane.showMessageDialog(null, "PNG 파일만 인식합니다!");
@@ -283,11 +188,36 @@ public abstract class ScreenCustom extends TitleScreen {
         return null;
     }
 
+    protected void renderTexture(GuiGraphics pGuiGraphics, ResourceLocation pShaderLocation, int x, int y, int width, int height, float pAlpha) {
+        RenderSystem.disableDepthTest();
+        RenderSystem.depthMask(false);
+        RenderSystem.enableBlend();
+        pGuiGraphics.setColor(1.0F, 1.0F, 1.0F, pAlpha);
+
+        pGuiGraphics.blit(pShaderLocation, 0, 0, -90, 0.0F, 0.0F, pGuiGraphics.guiWidth(), pGuiGraphics.guiHeight(), pGuiGraphics.guiWidth(), pGuiGraphics.guiHeight());
+        RenderSystem.disableBlend();
+        RenderSystem.depthMask(true);
+        RenderSystem.enableDepthTest();
+        pGuiGraphics.setColor(1.0F, 1.0F, 1.0F, 1.0F);
+    }
+
     public Widget getSelectWidget() {
         return selectWidget;
     }
 
-    public Widget getLastSelectWidget() {
-        return lastSelectWidget;
+    protected WidgetData getData(){
+        return widgetData;
+    }
+
+    public SwingManager getSwingDraw() {
+        return swingDraw;
+    }
+
+    public SwingManager getSwingBackgroundManager() {
+        return swingBackgroundManager;
+    }
+
+    public SwingManager getSwingButtonManager() {
+        return swingButtonManager;
     }
 }
